--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Brandon Johnson</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <h1>Edgar Covantes Osuna</h1>
+      <p>I'm a <span class="typed" data-typed-items="Researcher, Machine Learning Engineer, IA Engineer, Data Analyst"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://scholar.google.com/citations?user=1we-_1gAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fa-brands fa-google-scholar"></i></a>
+		<a href="mailto:edgarcovantes@gmail.com" target="_blank" title="Gmail"><i class="bx bi-envelope"></i></a>
+		<a href="https://github.com/edgarcovantesosuna" target="_blank" title="Github"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/edgar-covantes-osuna" target="_blank" title="Linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.kaggle.com/edgarcovantesosuna" target="_blank" title="Kaggle"><i class="fab fa-kaggle"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -411,14 +411,14 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
+      <h3>Edgar Covantes Osuna</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://scholar.google.com/citations?user=1we-_1gAAAAJ&hl=en" target="_blank" title="Google Scholar" class="google-scholar"><i class="fa-brands fa-google-scholar"></i></a>
+		<a href="mailto:edgarcovantes@gmail.com" target="_blank" title="Gmail" class="envelope"><i class="bx bi-envelope"></i></a>
+		<a href="https://github.com/edgarcovantesosuna" target="_blank" title="Github" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/edgar-covantes-osuna" target="_blank" title="Linkedin" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.kaggle.com/edgarcovantesosuna" target="_blank" title="Kaggle"><i class="fab fa-kaggle"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
@@ -445,8 +445,9 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
+  <!--<script src="assets/vendor/php-email-form/validate.js"></script>-->
+  
+  <script src="https://kit.fontawesome.com/1eb296dca1.js" crossorigin="anonymous"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
