--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>Portfolio: Edgar Covantes Osuna</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Edgar Covantes Osuna</h1>
-      <p>I'm a <span class="typed" data-typed-items="Researcher, Machine Learning Engineer, IA Engineer, Data Analyst"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Researcher, Machine Learning Engineer, IA Engineer, Data Analyst"></span></p>
       <div class="social-links">
         <a href="https://scholar.google.com/citations?user=1we-_1gAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fa-brands fa-google-scholar"></i></a>
 		<a href="mailto:edgarcovantes@gmail.com" target="_blank" title="Gmail"><i class="bx bi-envelope"></i></a>
@@ -80,7 +80,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Currently, I am working as a research professor at the ITESM in the area of data science and applied mathematics, machine learning. 
+              I have also worked in the areas of technical support, web development and embedded systems.</p>
         </div>
 
         <div class="row">
@@ -90,8 +91,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Machine Learning Engineer &amp; Data Analyst.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              My main interests are in machine and deep learning, and also I am interested (and I have worked) in randomized algorithms, algorithmic analysis, multimodal, multi-objective and combinatorial optimization, and how all these IA tools allows us to make better decisions.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -112,8 +112,7 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              My main expertise is the usage of Neural Networks for regression and classification problems. Also, the analysis and design of randomized search heuristics such as evolutionary algorithms for optimization problems and its use as tools for decision-making.
             </p>
           </div>
         </div>
