--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Machine Learning Engineer &amp; Data Analyst.</h3>
             <p class="fst-italic">
-              My main interests are in machine and deep learning, and also I am interested (and I have worked) in randomized algorithms, algorithmic analysis, multimodal, multi-objective and combinatorial optimization, and how all these IA tools allows us to make better decisions.
+              My main interests are in machine and deep learning, and also I am interested (and I have worked) with randomized algorithms, algorithmic analysis, multimodal, multi-objective and combinatorial optimization, and how all these IA tools allows us to make better decisions.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -411,7 +411,8 @@
   <footer id="footer">
     <div class="container">
       <h3>Edgar Covantes Osuna</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Always eager to learn more about data analysis and machine learning, and I would love to bring this passion for AI to any job position.</p>
+      
       <div class="social-links">
         <a href="https://scholar.google.com/citations?user=1we-_1gAAAAJ&hl=en" target="_blank" title="Google Scholar" class="google-scholar"><i class="fa-brands fa-google-scholar"></i></a>
 		<a href="mailto:edgarcovantes@gmail.com" target="_blank" title="Gmail" class="envelope"><i class="bx bi-envelope"></i></a>
