--- a/index.html
+++ b/index.html
@@ -126,63 +126,47 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!--<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
         </div>
 
         <div class="row skills-content">
-
           <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
+			<h4>Programming languages:</h4>
+			<div class="progress">
+			  <span class="skill"><i class="bi bi-chevron-right"></i> Python, R, C, C++, PHP, Java, Go, SQL.</span>
+			</div>
+            <h4>Libraries and Tools:</h4>
+			  <div class="progress">
+				<span class="skill"><i class="bi bi-chevron-right"></i> Keras, TensorFlow, Sklearn, SciPy, Pandas, Numpy, Git, Drupal, CakePHP, jQuery.</span>
+			  </div>
+            <h4>Data visualization tools:</h4>
+			  <div class="progress">
+				<span class="skill"><i class="bi bi-chevron-right"></i> Tableau, Matplotlib, PGF/TikZ.</span>
+			  </div>
           </div>
 
           <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
+            <h4>AI skills:</h4>
+			  <div class="progress">
+				<span class="skill"><i class="bi bi-chevron-right"></i> Strong understanding of ML algorithms, including supervised, unsupervised and deep learning (e.g., DNN, 
+				CNN, LSTM). Intelligent search agents (e.g., heuristics, metaheuristics, deterministic and ransomized search algorithms).</span>
+			  </div>
+			  <div class="progress">
+				<span class="skill"><i class="bi bi-chevron-right"></i> Intelligent search agents (e.g., heuristics, metaheuristics, deterministic and ransomized search 
+				algorithms).</span>
+			  </div>
+            <h4>Cloud computing platforms:</h4>
+			<div class="progress">
+			  <span class="skill"><i class="bi bi-chevron-right"></i> Familiarity with cloud computing platforms (e.g., <a href="https://learn.microsoft.com/en-us/users/edgarcovantesosuna-2058/">Azure</a>, <a href="https://www.cloudskillsboost.google/public_profiles/bbde823d-607d-416d-bc5a-2d713ac67fb4">Google Cloud</a>) and
+containerization technologies (e.g., Docker, Kubernetes).</span>
+			</div>
+            <h4>Other Technical skills: </h4>
+			<div class="progress">
+			  <span class="skill"><i class="bi bi-chevron-right"></i> Strong understanding of Statistical (including hypothesis testing) and Probability concepts, Complexity Theory, 
+			  Algorithms, Google Sheets, Microsoft Excel, Relational databases, LaTeX.</span>
+			 </div>
           </div>
-
         </div>
-
       </div>
     </section><!-- End Skills Section -->
 
