--- a/index.html
+++ b/index.html
@@ -359,21 +359,7 @@ clients, division and production products. Participation in all stages of the de
                 <p>Data Analysis</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/Cyclistic_bike_share/bike.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The task titled 'Case Study 1: How does a bike-share navigate speedy success?' consists of analyzing a case similar to what you might be asked for in a job interview."><i class="bx bx-plus"></i></a>
-                  <a href="portfolio/portfolio-details-cyclistic_bike_share.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio/portfolio-details-cyclistic-bike-share.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -381,13 +367,27 @@ clients, division and production products. Participation in all stages of the de
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/IGDplus-MaOEA-RS/approx_sets_IGD.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Towards a More Balanced Reference Set Adaptation Method: First Results</h4>
+                <p>Optimization</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/IGDplus-MaOEA-RS/approx_sets_IGD.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Approximation sets with the median IGD<sup>+</sup> value among 30 independent runs on some problems from DTLZ, DTLZ<sup>-1</sup> and IMOP suites."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio/portfolio-details-IGDplus-MaOEA-RS.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/NSGA-III-K/approx_sets.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Towards a Pareto Front Shape Invariant Multi-Objective Evolutionary Algorithm Using Pair-Potential Functions</h4>
+                <p>Optimization</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/NSGA-III-K/approx_sets.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Approximation sets with the median HV value of NSGA-III and MOEAs with the 1st and 2nd rank on the DTLZ1 and DTLZ1<sup>-1</sup> with 3 and 10 objectives."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio/portfolio-details-NSGA-III-K.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -463,7 +463,7 @@ clients, division and production products. Participation in all stages of the de
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
