--- a/index.html
+++ b/index.html
@@ -395,13 +395,13 @@ clients, division and production products. Participation in all stages of the de
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Pair-Potential/discretization.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>An Overview of Pair Potential Functions for Multi-Objective Optimization</h4>
+                <p>Optimization</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/Pair-Potential/discretization.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Generate a subset of objective vectors with high diversity that best describes the distribution of the true Pareto front."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio/portfolio-details-Pair-Potential.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -409,33 +409,33 @@ clients, division and production products. Participation in all stages of the de
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Pair-Potential-Energy/MOEAD.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>On the utilization of pair-potential energy functions in multi-objective optimization</h4>
+                <p>Optimization</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/Pair-Potential-Energy/MOEAD.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MOEA/D with pair-potential energy-based archive."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio/portfolio-details-Pair-Potential-Energy.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/reg/reg.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>General regression work-flow used to predict the value of the parameter &alpha; for each pair-potential kernel.</h4>
+                <p>Machine Learning</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/reg/reg.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="General regression work-flow used to predict the value of the parameter &alpha; for each pair-potential kernel."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio/portfolio-details-reg.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
+         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -475,7 +475,7 @@ clients, division and production products. Participation in all stages of the de
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
 
         </div>
 
