--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Edgar Covantes Osuna</h1>
-      <p>I'm <span class="typed" data-typed-items="Researcher, Machine Learning Engineer, IA Engineer, Data Analyst"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Researcher, Machine Learning Engineer, AI Engineer, Data Analyst"></span></p>
       <div class="social-links">
         <a href="https://scholar.google.com/citations?user=1we-_1gAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fa-brands fa-google-scholar"></i></a>
 		<a href="mailto:edgarcovantes@gmail.com" target="_blank" title="Gmail"><i class="bx bi-envelope"></i></a>
