--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ clients, division and production products. Participation in all stages of the de
             
             <h3 class="resume-title">Courses and Certifications</h3>
             <div class="resume-item">
-              <h4>Google Data Analytics Professional.</h4>
+              <h4>Google Data Analytics</h4>
               <h5>April 2024</h5>
               <p><em>Google</em></p>
             </div>
