--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Machine Learning Engineer &amp; Data Analyst.</h3>
             <p class="fst-italic">
-              My main interests are in machine and deep learning, and also I am interested (and I have worked) with randomized algorithms, algorithmic analysis, multimodal, multi-objective and combinatorial optimization, and how all these IA tools allows us to make better decisions.
+              My main interests are in machine and deep learning, and also I am interested (and I have worked) with randomized algorithms, algorithmic analysis, multimodal, multi-objective and combinatorial optimization, and how all these AI tools allows us to make better decisions.
             </p>
             <div class="row">
               <div class="col-lg-6">
