--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Edgar Covantes Osuna</h1>
-      <p>I'm <span class="typed" data-typed-items="Researcher, Machine Learning Engineer, AI Engineer, Data Analyst"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Researcher, Machine Learning Engineer, IA Engineer, Data Analyst"></span></p>
       <div class="social-links">
         <a href="https://scholar.google.com/citations?user=1we-_1gAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fa-brands fa-google-scholar"></i></a>
 		<a href="mailto:edgarcovantes@gmail.com" target="_blank" title="Gmail"><i class="bx bi-envelope"></i></a>
@@ -91,7 +91,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Machine Learning Engineer &amp; Data Analyst.</h3>
             <p class="fst-italic">
-              My main interests are in machine and deep learning, and also I am interested (and I have worked) with randomized algorithms, algorithmic analysis, multimodal, multi-objective and combinatorial optimization, and how all these AI tools allows us to make better decisions.
+              My main interests are in machine and deep learning, and also I am interested (and I have worked) with randomized algorithms, algorithmic analysis, multimodal, multi-objective and combinatorial optimization, and how all these IA tools allows us to make better decisions.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -242,7 +242,7 @@ clients, division and production products. Participation in all stages of the de
             
             <h3 class="resume-title">Courses and Certifications</h3>
             <div class="resume-item">
-              <h4>Google Data Analytics</h4>
+              <h4>Google Data Analytics Professional.</h4>
               <h5>April 2024</h5>
               <p><em>Google</em></p>
             </div>
@@ -435,21 +435,21 @@ clients, division and production products. Participation in all stages of the de
             </div>
           </div>
 
-         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
+         <div class="col-lg-4 col-md-6 portfolio-item filter-da">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Bellabeat/bellabeat.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Bellabeat Analysis</h4>
+                <p>Data Analysis</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/Bellabeat/bellabeat.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The task titled 'Case Study 2: How Can a Wellness Technology Company Play It Smart?' consists of analyzing a case similar to what you might be asked for in a job interview."><i class="bx bx-plus"></i></a>
+                  <a href="portfolio/portfolio-details-bellabeat.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-opt">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
