--- a/portfolio/portfolio-details-bellabeat.html
+++ b/portfolio/portfolio-details-bellabeat.html
@@ -57,6 +57,10 @@
                 <div class="swiper-slide">
                   <img src="../assets/img/portfolio/Bellabeat/correlations.svg" alt="">
                 </div>
+                
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/Bellabeat/active.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
