AdaK project added and other projects updated. Other minor changes added.

--- a/portfolio/portfolio-details-IGDplus-MaOEA-RS.html
+++ b/portfolio/portfolio-details-IGDplus-MaOEA-RS.html
@@ -74,7 +74,9 @@
                 <li><strong>Category</strong>: Multi-Objective Optimization</li>
                 <!--<li><strong>Client</strong>: ASU Company</li>-->
                 <li><strong>Project date</strong>: 9 August, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/lmarquezvg/IGDplus-MaOEA-RS" target="_blank">IGDplus-MaOEA-RS</a></li>
+				<li><strong>Project URL</strong>: <a href="https://ieeexplore.ieee.org/document/9504769" target="_blank">Towards a More Balanced Reference Set Adaptation Method: First Results
+</a></li>
+                <li><strong>Project Code</strong>: <a href="https://github.com/lmarquezvg/IGDplus-MaOEA-RS" target="_blank">IGDplus-MaOEA-RS</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
