--- a/portfolio/portfolio-details-NSGA-III-K.html
+++ b/portfolio/portfolio-details-NSGA-III-K.html
@@ -79,7 +79,8 @@
                 <li><strong>Category</strong>: Multi-Objective Optimization</li>
                 <!--<li><strong>Client</strong>: ASU Company</li>-->
                 <li><strong>Project date</strong>: 21 October, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/lmarquezvg/NSGA-III-K" target="_blank">NSGA-III-K</a></li>
+				<li><strong>Project URL</strong>: <a href="https://doi.org/10.1007/978-3-030-89817-5_28" target="_blank">Towards a Pareto Front Shape Invariant Multi-Objective Evolutionary Algorithm Using Pair-Potential Functions</a></li>
+                <li><strong>Project Code</strong>: <a href="https://github.com/lmarquezvg/NSGA-III-K" target="_blank">NSGA-III-K</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
