--- a/portfolio/portfolio-details-reg.html
+++ b/portfolio/portfolio-details-reg.html
@@ -75,7 +75,8 @@
                 <li><strong>Category</strong>: Machine Learning</li>
                 <!--<li><strong>Client</strong>: ASU Company</li>-->
                 <li><strong>Project date</strong>: 13 April, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/jguillermofc/Pair-Potential-Energy/tree/main/PPF-predicting-alpha" target="_blank">Predicting &alpha;</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.sciencedirect.com/science/article/abs/pii/S2210650223000810" target="_blank">On the utilization of pair-potential energy functions in multi-objective optimization</a></li>
+				<li><strong>Project Code</strong>: <a href="https://github.com/jguillermofc/Pair-Potential-Energy/tree/main/PPF-predicting-alpha" target="_blank">Predicting &alpha;</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
