--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@ containerization technologies (e.g., Docker, Kubernetes).</span>
             </div>
             <div class="resume-item">
               <h4>Research Professor</h4>
-              <h5>July 2019 - December 2013</h5>
-              <p><em>Instituto Tecnoĺogico y de Estudios Superiores de Monterrey, Nuevo Léon, México </em></p>
+              <h5>July 2019 - December 2023</h5>
+              <p><em>Instituto Tecnológico y de Estudios Superiores de Monterrey, Nuevo Léon, México </em></p>
               <ul>
                 <li>Research Area: Applied Mathematics, Data Science, Machine Learning and Multi-objective Optimization.</li>
                 <li>Lectures: Advanced Algorithms Analysis and Design, Development of Advanced Applications of Computer Science,
@@ -237,6 +237,24 @@ clients, division and production products. Participation in all stages of the de
               <p><em>Softtek, Jalisco, México</em></p>
               <ul>
                 <li>Developer and/or programmer as a Backup on the .NET framework for Hewlett-Packard (HP).</li>
+              </ul>
+            </div>
+			
+			<div class="resume-item">
+              <h4>Trainee</h4>
+              <h5>September 2010 - March 2011</h5>
+              <p><em>TATA Consultancy Services (TCS), Jalisco, México</em></p>
+              <ul>
+                <li>Trainee in the area of WEB development and programming. Technical support in the project GE Support Central.</li>
+              </ul>
+            </div>
+			
+			<div class="resume-item">
+              <h4>Backend Developer</h4>
+              <h5>April 2010 - September 2010</h5>
+              <p><em>DATAWINS, Sinaloa, México</em></p>
+              <ul>
+                <li>Backend Developer (PHP, Drupal, CakePHP, JQUERY).</li>
               </ul>
             </div>
 			
